# WdPC

./: .gitignore
cwiczenia/: stala_catalana.c
prac0/: przyklad_1.c  zad3.c  zad4.c
prac1/: test.c  zad1.c  zad2.c  zad3.c  zad3_z_pracowni.txt
prac1/test/test/: main.c  test.depend  test.layout
prac1/zad3/zad3/: main.c  zad3.cbp  zad3.depend
prac2/zad1/: main.c  zad1.depend  zad1.layout
prac2/zad2/: main.c  tekst.txt  zad2.cbp  zad2.depend  zad2.layout
prac2/zad3/: main.c  zad3.cbp  zad3.depend  zad3.layout
prac3/zad1/: main.c
prac3/zad2/: main.c
prac3/zad3/: Untitled1.c  main.c  t1.txt  t2.txt
prac4/guwno/: main.c
prac4/zad1/: main.c  x.txt
prac4/zad2/: main.c
prac4/zad3/: f-protot.h  spz_alg.c  spz_io.c  spz_main.c
prac4/zad3_3/: main.c
prac4/zad3_bez_mod/: main.c  main2.c
prac5/zad1/: main.c
prac5/zad2/: main.c
prac5/zad3/: main.c  proba2.c  proba3.c
prac6/zad1/: main.c
prac6/zad2/: main.c  saper.c  saper.h
prac7/: zad.c
prac7/zad1/: main.c
prac7/zad2/: main.c
prac7/zad3/: main.c
prac8/zad1/: main.c
prac8/zad3/: main.c  t.txt
prac9/zad1/: Untitled1.c  main.c
projekt/: Szkutek Agnieszka - specyfikacja WdPC.docx
projekt/CandyCrush/: CMakeLists.txt  gui.c  gui.h  main.c
projekt/CandyCrush/src/: main.c  types.h
projekt/CandyCrush/src/gui/: gui.c  gui.h
projekt/CandyCrush/src/model/: figures.c  model.c  model.h
